# Joi-agent

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
docs/roadmap/: joi-agent-0.11-workspace-ui-plan.md  joi-agent-0.12-brief-material-understanding-plan.md  joi-agent-0.13-agent-runtime-integration-plan.md  joi-agent-0.14-research-report-drafting-plan.md  joi-agent-0.15-practical-long-term-memory-plan.md  joi-agent-0.16-storyboard-generation-plan.md  joi-agent-0.17-multi-model-prompt-adapters-plan.md  joi-agent-0.18-reports-delivery-package-plan.md  joi-agent-0.19-quality-review-iteration-plan.md  joi-agent-0.2-roadmap.md  joi-agent-0.20-usable-beta-plan.md
scripts/phase0/: __init__.py  (+4 more)
src/: App.test.tsx  App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: agent_context.rs  agent_runtime.rs  assets.rs  beta_workflow.rs  commands.rs  db.rs  delivery_report.rs  error.rs  hermes_bridge.rs  lib.rs  main.rs  memory_curation.rs  models.rs  project_package.rs  prompt_adapter.rs  quality_review.rs  repositories.rs  research.rs  snapshots.rs  storyboard.rs  understanding.rs  validation.rs
src-tauri/tests/: agent_runtime.rs  asset_import.rs  beta_workflow.rs  brand_project_repository.rs  commands.rs  db_migration.rs  delivery_report.rs  memory_curation.rs  memory_ledger.rs  project_export.rs  project_import.rs  project_snapshots.rs  prompt_adapter.rs  quality_review.rs  research.rs  storyboard_generation.rs  structured_content_repository.rs
src-tauri/tests/common/: mod.rs
(+37 files in other folders)
