[package]
name = "joi-agent"
version = "0.1.0"
description = "Joi Agent desktop application"
authors = ["Joi Agent"]
edition = "2021"

[lib]
name = "joi_agent_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
thiserror = "2"
